# advent2023

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
crates/day-01/: Cargo.toml
crates/day-01/src/: lib.rs
crates/day-02/: Cargo.toml
crates/day-02/src/: lib.rs
crates/day-03/: Cargo.toml
crates/day-03/src/: lib.rs
crates/day-04/: Cargo.toml
crates/day-04/src/: lib.rs
crates/day-05/: Cargo.toml
crates/day-05/src/: lib.rs
crates/day-06/: Cargo.toml
crates/day-06/src/: lib.rs
crates/day-07/: Cargo.toml
crates/day-07/src/: lib.rs
crates/day-08/: Cargo.toml
crates/day-08/src/: lib.rs
crates/day-09/: Cargo.toml
crates/day-09/src/: lib.rs
crates/day-10/: Cargo.toml
crates/day-10/src/: lib.rs
crates/day-11/: Cargo.toml
crates/day-11/src/: lib.rs
crates/day-12/: Cargo.toml
crates/day-12/src/: lib.rs
crates/day-13/: Cargo.toml
crates/day-13/src/: lib.rs
crates/day-14/: Cargo.toml
crates/day-14/src/: lib.rs
crates/day-15/: Cargo.toml
crates/day-15/src/: lib.rs
crates/day-16/: Cargo.toml
crates/day-16/src/: lib.rs
crates/day-17/: Cargo.toml
crates/day-17/src/: lib.rs
crates/day-18/: Cargo.toml
crates/day-18/src/: lib.rs
crates/day-19/: Cargo.toml
crates/day-19/src/: lib.rs  parser.rs
crates/day-20/: Cargo.toml
crates/day-20/src/: lib.rs  parser.rs
crates/day-21/: Cargo.toml
crates/day-21/src/: lib.rs
crates/day-22/: Cargo.toml
crates/day-22/src/: lib.rs  parser.rs
crates/day-23/: Cargo.toml
crates/day-23/src/: lib.rs
crates/day-24/: Cargo.toml
crates/day-24/src/: lib.rs
crates/day-25/: Cargo.toml
crates/day-25/src/: lib.rs  parser.rs
crates/template/: Cargo.toml
crates/template/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: cache.rs  geometry.rs  graph.rs  grid.rs  lib.rs  numerics.rs  range.rs  sequence.rs  slice.rs  test.rs
crates/util/src/graph/: astar.rs  mod.rs  search.rs
crates/util/src/tree/: kdtree.rs
src/: benchmark.rs  main.rs  puzzle.rs  report.rs
