[package]
name = "aoc2023"
authors.workspace = true
version.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Medea"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
itertools = "0.12"
nalgebra = "0.32"
nom = "7.1"
nom_locate = "4.2"
nom-supreme = "0.8"
rayon = "1.8"
regex = "1.10"
rstest = "0.18"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aoc2023-template = { path = "crates/template" }
aoc2023-01 = { path = "crates/day-01" }
aoc2023-02 = { path = "crates/day-02" }
aoc2023-03 = { path = "crates/day-03" }
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
