[package]
name = "aoc2023"
authors.workspace = true
version.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Medea"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bitflags = "2.4"
itertools = "0.12"
nalgebra = "0.32"
nom = "7.1"
nom_locate = "4.2"
nom-supreme = "0.8"
num = "0.4"
rayon = "1.8"
regex = "1.10"
rstest = "0.18"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow.workspace = true
itertools.workspace = true
thiserror.workspace = true
aoc2023-template = { path = "crates/template" }
aoc2023-01 = { path = "crates/day-01" }
aoc2023-02 = { path = "crates/day-02" }
aoc2023-03 = { path = "crates/day-03" }
aoc2023-04 = { path = "crates/day-04" }
aoc2023-05 = { path = "crates/day-05" }
aoc2023-06 = { path = "crates/day-06" }
aoc2023-07 = { path = "crates/day-07" }
aoc2023-08 = { path = "crates/day-08" }
aoc2023-09 = { path = "crates/day-09" }
aoc2023-10 = { path = "crates/day-10" }
aoc2023-11 = { path = "crates/day-11" }
aoc2023-12 = { path = "crates/day-12" }
aoc2023-13 = { path = "crates/day-13" }
aoc2023-14 = { path = "crates/day-14" }
aoc2023-15 = { path = "crates/day-15" }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
