[package]
name = "aoc2023-01"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
bitflags.workspace = true
itertools.workspace = true
nalgebra.workspace = true
nom.workspace = true
nom_locate.workspace = true
nom-supreme.workspace = true
num.workspace = true
rayon.workspace = true
regex.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
aoc-util = { path = "../util" }

[dev-dependencies]
rstest.workspace = true
