[package]
name = "aoc-util"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
bitflags.workspace = true
itertools.workspace = true
nalgebra.workspace = true
nom.workspace = true
nom_locate.workspace = true
nom-supreme.workspace = true
num.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rstest.workspace = true
